erDiagram
USERS {
    int id PK
    string username
    string email
    string status
    string uiid
    string password_hash
    string user_token
    string avatar_cid
    string prefered_language
    string notification_settings
    datetime created_at
    datetime updated_at
}

USER_PERMISSIONS {
    int id PK
    string user_email FK "references USERS.email"
    string workspace_id
    string role
    string status
    datetime created_at
    datetime updated_at
}

WORKSPACE_PASSWORDS {
    int id PK
    string workspace_id
    blob encrypted_password
    datetime created_at
    datetime updated_at
}

JOB_STATUS {
    int id PK
    string request_id
    string status "pending|processing|completed|failed"
    string error
    json attributes
    string template_id
    datetime created_at
    datetime updated_at
}

PROMPTS {
    int id PK
    string title
    string prompt
    string created_by
    string updated_by
    datetime created_at
    datetime updated_at
}

PASSWORD_RESET_TOKENS {
    int id PK
    int user_id FK "references USERS.id"
    string token
    datetime created_at
    datetime updated_at
}

%% Relationships
USERS ||--o{ USER_PERMISSIONS : "has"
USERS ||--o{ PASSWORD_RESET_TOKENS : "has"
